# TS-Enhancer-Extreme

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
cmake/: generate_manifest.cmake
cmake/Modules/: FindCargo.cmake
module/: build.gradle.kts
module/src/: action.sh  customize.sh  daemon  module.prop  post-fs-data.sh  service.sh  uninstall.sh  verify.sh
module/src/script/: state.sh  util_functions.sh
tsee/cmd_tool/: Cargo.toml
tsee/cmd_tool/src/: main.rs
tsee/sign_tool/: Cargo.toml
tsee/sign_tool/src/: main.rs
tsee/tseed/: Cargo.toml
tsee/tseed/src/: main.rs  utils.rs
tsee/tseed/src/commands/: conflictappcheck.rs  conflictmodcheck.rs  mod.rs  packagelistupdate.rs  passpropstate.rs  passvbhash.rs  passvbhash_test.rs  proxyconfig.rs  proxyctl.rs  rootdetect.rs  securitypatch.rs  staterefresh.rs  stealkeybox.rs  tsctl.rs  tseectl.rs
tsee/tseed/tests/: integration_tests.rs
tsee/tseev/: Cargo.toml
tsee/tseev/src/: lib.rs
tsee/tseev/tests/: integration_tests.rs
tseed/: build.gradle.kts
tseet/: build.gradle.kts  gradle.properties  settings.gradle.kts
tseet/app/: build.gradle.kts
tseet/app/src/main/: AndroidManifest.xml
tseet/app/src/main/java/com/dere3046/tseet/: AppChangeReceiver.kt  Main.kt  ProxyBootReceiver.kt  ProxyDeviceAdmin.kt  SocketServer.kt  TargetProxyManager.kt  TargetProxyService.kt  VBHashExtractor.kt  VBHashProvider.kt
webui/: index.html  package-lock.json  package.json  tsconfig.json
webui/src/: App.tsx  index.css
webui/src/components/: AboutPage.tsx  AppBar.tsx  AutoProxyPage.tsx  BottomNav.tsx  DashboardCard.tsx  DeveloperCard.tsx  DeviceInfoCard.tsx  FileBrowser.tsx  KeyboxPage.tsx  LogsPage.tsx  NavCards.tsx  SecurityPatchCard.tsx  SecurityPatchPage.tsx  SettingsPage.tsx  StatusCard.tsx  TargetPage.tsx  TestPage.tsx  ToolPage.test.tsx  ToolPage.tsx
webui/src/contexts/: AppContext.test.tsx  AppContext.tsx  I18nContext.tsx  LoggerContext.tsx  ThemeContext.tsx
webui/src/i18n/: en.ts  index.ts  types.ts  zh.ts
webui/src/mock/: data.ts  index.ts
webui/src/services/: tseed.test.ts  tseed.ts
webui/src/test/: setup.ts
webui/src/utils/: debug.ts  settings.test.ts  settings.ts
