[package]
name = "tseed"
version = "1.1.0"
edition = "2021"
authors = ["Dere3046", "XtrLumen"]

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
regex = "1"
libloading = "0.9"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
debug = false
panic = "abort"
opt-level = "z"
incremental = false
codegen-units = 1
