[package]
name = "tseev"
version = "1.0.0"
edition = "2021"
authors = ["Dere3046", "XtrLumen"]

[lib]
name = "verify"
crate-type = ["dylib"]

[dependencies]
hex = "0.4"
blake3 = "1.8"
ed25519-compact = "2.0"
chacha20poly1305 = "0.10"

[profile.release]
lto = true
strip = true
debug = false
panic = "abort"
opt-level = "z"
incremental = false
codegen-units = 1
